--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Learnbook</title>
+    <title>QERP</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <base href="/beta">
+    <base href="/">
 
     <!--Google Fonts-->
     <link href='https://fonts.googleapis.com/css?family=Oswald:300,700,400' rel='stylesheet' type='text/css'>
