--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                 <div class="container">            <!-- Dark Blue Topbar -->
                     <div class="topbar">
                         <div>
-                            Call us : +0123456789           <!-- Change Topbar Contact Number here -->
+                                    <!-- Change Topbar Contact Number here -->
                         </div>
                         <div>
                             <ul class="topbar-widgets">         <!-- Topbar Widgets - Cart, Language Select & Login Signup -->
@@ -470,15 +470,7 @@
                                 <h4 class="heading">Login to your account</h4>
                                 <p>Access your account, change settings or access your dashboard.</p>
                                 <form id="login-form">
-                                    <div class="form-group">
-                                        <label>Login Id</label>
-                                        <input id="login-id" type="text" class="form-control" name="login-id">
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Password</label>
-                                        <input id="login-pass" type="text" class="form-control" name="login-password">
-                                    </div>
-                                    <button routerLink="/add" routerLinkActive="active-link" type="submit" name="submit" class="btn btn-primary">Login</button>
+                                    <a href="login" class="btn btn-primary">Login</a>
                                 </form>
                                 <br>
                                 <a href="forgot-password.html">Forgot Password?</a>
